# papertimed

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
examples/: config.toml  config.yaml  configg.toml
nix/: module.nix  package.nix
src/: config.rs  daemon.rs  evaluator.rs  lib.rs  main.rs
src/adapter/: custom.rs  hyprpaper.rs  mod.rs  wpaperd.rs
src/config/: mod.rs  raw.rs
