[package]
name = "papertimed"
version = "0.1.0"
edition = "2024"
license = "mit"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = ["sync"] }

[dev-dependencies]
serde_json = "1.0"
